--- a/AppLanding/css/online-shopping-app.css
+++ b/AppLanding/css/online-shopping-app.css
@@ -1,13 +1,10 @@
-/* html {
-  scroll-behavior: smooth;bp
-} */
+/* GENERAL BODY STYLES */
 
 * {
-  /* -webkit-box-sizing: border-box; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -19,40 +16,13 @@ body {
   background-position: 50px 1150px;
   background-clip: padding-box;
   background-size: auto;
-  
-  
 }
 
 
 
-/* .devugo-btn {
-  background: #112D4E;
-  color: #fff;
-  border-radius: 5px;
-  font-size: 18px;
-  border: 1px solid #112D4E;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
 
-.devugo-btn:hover {
-  background: #3F72AF;
-  border: 1px solid #3F72AF;
-  color: #fff;
-}
 
-.devugo-inactive__btn {
-  color: #112D4E;
-  border: 2px solid #112D4E;
-  background: #fff;
-}
-
-.devugo-disabled__btn {
-  color: #fff;
-  background: #E0E0E0;
-} */
-
-/* Start Navbar */
+/* NAVBAR */
 .navbar {
   background: #FFF;
 
@@ -60,30 +30,19 @@ body {
   padding-left: 25px;
   padding-right: 25px;
   z-index: 5;
-  /* -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out; */
 }
 
-/* .navbar .nav-item .nav-link.active, .navbar .nav-item .nav-link:hover {
-  position: relative;
-} */
 
-/* .navbar .nav-item .nav-link.active::after, .navbar .nav-item .nav-link:hover::after {
-  position: absolute;
-  content: '';
-  left: 11px;
-  bottom: 5px;
-  height: 2px;
-  width: 40px;
-  background-color: #1947E5;
-} */
 
-.log-style {
- color: #1947E5;
- background-color: #C4C4C4;
- padding: 2px 25px;
- border-radius: 3px;
- opacity: 0.8;
+.logo-style {
+  color: #1947E5;
+  background-color: #fff;
+  padding:0;
+  border-radius: 0px;
+  opacity: 1;
+  font-size: 2.1875rem;
+  font-family: "Montserrat";
+  font-weight: 900 !important;
 }
 
 .navbar li a.nav-link {
@@ -91,6 +50,7 @@ body {
 }
 
 
+/* SECTIONS */
 p.dont-show {
   font-size: 2rem;
   line-height: 35px;
@@ -103,8 +63,19 @@ p.dont-show {
  line-height: 35px;
 }
 
+.adjust-font-size{
+  font-family: "Montserrat";
+  font-size: 50px;
+}
+
+.change-font-family {
+  font-family: "Gilroy";
+}
+
 .p1 span {
  color: #1947E5;
+ font-family: "Montserrat";
+  font-size: 50px;
  }
 
  #showcase {
@@ -123,12 +94,7 @@ p.dont-show {
   display: none;
 }
 
-/* #parallelogram {
-  width: 100%;
-  height: 100px;
 
-  background: #466BEB;
-} */
 
 .move-down-1 {
   padding-left: 0px !important;
@@ -141,8 +107,8 @@ p.dont-show {
 
 .skewed-bg{
   background: #466BEB;
-  -webkit-transform: skew(0deg, -15deg);
-  transform: skew(0deg, -15deg);
+  -webkit-transform: skew(0deg, 0deg);
+  transform: skew(0deg, 0deg);
   margin-top: -90px;
 }
 .skewed-bg .contained{
@@ -155,8 +121,8 @@ p.dont-show {
 
 .skewed-bg-2{
   background: #F96D45;
-  -webkit-transform: skew(0deg, -15deg);
-  transform: skew(0deg, -15deg);
+  -webkit-transform: skew(0deg, 0deg);
+  transform: skew(0deg, 0deg);
   margin-top: -90px;
 }
 .skewed-bg-2 .contained{
@@ -281,7 +247,7 @@ p.dont-show {
 
 
 
-  /* Footer */
+  /* FOOTER */
 
   ul {
     list-style: none
@@ -335,35 +301,11 @@ p.dont-show {
 }
 
 
-/* .signin {
-  border: 1.5px solid #112D4E;
-  color: #112D4E;
-  background: white;
-  border-radius: 5px;
-  padding: 10px 30px;
-  margin-bottom: 20px;
-  margin-top: 10px;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 27px;
-}
-
-.signin:hover {
-  background: white !important;
-  color: #112D4E;
-}
-
-.register {
-  background: #112D4E;
-  color: white;
-  padding: 10px 30px;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 27px;
-} */
 
 
 
+
+/* MEDIA QUERIES */
 @media (min-width: 992px) {
   .navbar {
     height: 100px;
@@ -381,10 +323,8 @@ p.dont-show {
   }
 }
 
-/* End Navbar */
-.home-banner {
-  background: #1947E5;
-}
+
+
 
 @media only screen and (max-width: 375px) {
   #showcase {
@@ -447,7 +387,15 @@ p.dont-show {
 }
 
 
-/* @media only screen and (min-width: 1200px) { ... }*/
+@media only screen and (min-width: 1200px) { 
+  .logo-style {
+    color: #1947E5;
+    background-color: #fff;
+    padding-left:25px;
+    border-radius: 0px;
+    opacity: 1;
+  }
+ }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   body {
@@ -460,6 +408,16 @@ p.dont-show {
 
     background-size: 100%;
   }
+
+  .logo-style {
+    color: #1947E5;
+    background-color: #fff;
+    padding-left:25px;
+    border-radius: 0px;
+    opacity: 1;
+  }
+
+
  }
 
  @media only screen and (max-width: 992px) {
@@ -480,13 +438,15 @@ p.dont-show {
     }
 
 
-    .log-style {
+    .logo-style {
       color: #1947E5;
       background-color: #fff;
       padding:0;
       border-radius: 0px;
       opacity: 1;
+      font-size: 20px;
      }
+
  }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -506,6 +466,14 @@ p.dont-show {
     line-height: 35px;
     margin-top: 70px;
     padding-left: 0.5rem;
+  }
+
+  .logo-style {
+    color: #1947E5;
+    background-color: #fff;
+    padding-left:35px;
+    border-radius: 0px;
+    opacity: 1;
   }
  }
 
@@ -563,6 +531,14 @@ p.dont-show {
     text-align: center;
     padding-top: 50px;
     color: #fff
+  }
+
+  .logo-style {
+    color: #1947E5;
+    background-color: #fff;
+    padding-left:30px;
+    border-radius: 0px;
+    opacity: 1;
   }
  }
 
