--- a/AppLanding/css/online-shopping-app.css
+++ b/AppLanding/css/online-shopping-app.css
@@ -197,7 +197,7 @@ p.dont-show {
 
     video {
       width: 100%;
-      height: auto;
+      height: 100%;
     }
 
     .accordion-section .panel-default > .panel-heading {
